main.css
@import url('https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700|Roboto+Condensed:400,700|Roboto+Mono&display=swap');
/*
	font-family: 'Roboto Condensed', sans-serif;
	font-family: 'Roboto Mono', monospace;
	font-family: 'Noto Serif', serif;
*/

a:link, a:visited {
	color: blue;
}

a:focus, a:hover {
	background-color: #ddddff;
	border-radius: 5px;
	text-decoration: underline;
	transition-duration: 0.2s;
	transition-property: background;
}

body {
	font-family: 'Noto Serif', serif;
	font-size: 18px;
	
	display: grid;
	grid-template-areas: "header header header"
						"nav main aside"
						"footer footer footer";
	grid-template-columns: 25% 50% 25%;
}

h1, h2 {
	font-family: 'Roboto Condensed', sans-serif;
	letter-spacing: .05em;
	margin: 1.5rem auto;
	text-align: center;	
}

h1 {
	font-size: 3rem;
}

h2 {
	font-size: 2.25rem;
}

header {
	text-align: center;
}

main {
	grid-area: main;
}

p {
	line-height: 140%;
	margin-bottom: 1em;
}

#intro {
	font-size: 22px;
}

#automotive, #maritime, #medical, #physics, #myths {

}

#footer-container {
	grid-area: footer;
}

#header-container {
	grid-area: header;
}

#main-container {
	grid-area: nav;
}
aside {
	grid-area: aside;
}

